[package]
name = "giflias"
version = "0.1.0"
edition = "2024"

[dependencies]
# from serenity-rs github /examples basic_ping_bot
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }